tests/errors/DivByZeroScalar.imp
VAR
  a b
BEGIN
  b := 0;
  a := 5 / b;
END
